// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fe-chevron-down icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="6 9 12 15 18 9"
  />
</svg>
`;

exports[`fe-cloud icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"
  />
</svg>
`;

exports[`fe-copy icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="13"
    rx="2"
    ry="2"
    width="13"
    x="9"
    y="9"
  />
  <path
    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
  />
</svg>
`;

exports[`fe-edit icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
  />
  <path
    d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
  />
</svg>
`;

exports[`fe-external-link icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
  />
  <polyline
    points="15 3 21 3 21 9"
  />
  <line
    x1="10"
    x2="21"
    y1="14"
    y2="3"
  />
</svg>
`;

exports[`fe-filter icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"
  />
</svg>
`;

exports[`fe-github icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
  />
</svg>
`;

exports[`fe-loader icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="2"
    y2="6"
  />
  <line
    x1="12"
    x2="12"
    y1="18"
    y2="22"
  />
  <line
    x1="4.93"
    x2="7.76"
    y1="4.93"
    y2="7.76"
  />
  <line
    x1="16.24"
    x2="19.07"
    y1="16.24"
    y2="19.07"
  />
  <line
    x1="2"
    x2="6"
    y1="12"
    y2="12"
  />
  <line
    x1="18"
    x2="22"
    y1="12"
    y2="12"
  />
  <line
    x1="4.93"
    x2="7.76"
    y1="19.07"
    y2="16.24"
  />
  <line
    x1="16.24"
    x2="19.07"
    y1="7.76"
    y2="4.93"
  />
</svg>
`;

exports[`fe-moon icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
  />
</svg>
`;

exports[`fe-pen icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 19l7-7 3 3-7 7-3-3z"
  />
  <path
    d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"
  />
  <path
    d="M2 2l7.586 7.586"
  />
  <circle
    cx="11"
    cy="11"
    r="2"
  />
</svg>
`;

exports[`fe-search icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="11"
    cy="11"
    r="8"
  />
  <line
    x1="21"
    x2="16.65"
    y1="21"
    y2="16.65"
  />
</svg>
`;

exports[`fe-sun icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="5"
  />
  <line
    x1="12"
    x2="12"
    y1="1"
    y2="3"
  />
  <line
    x1="12"
    x2="12"
    y1="21"
    y2="23"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="4.22"
    y2="5.64"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="18.36"
    y2="19.78"
  />
  <line
    x1="1"
    x2="3"
    y1="12"
    y2="12"
  />
  <line
    x1="21"
    x2="23"
    y1="12"
    y2="12"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="19.78"
    y2="18.36"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="5.64"
    y2="4.22"
  />
</svg>
`;

exports[`fe-thumbsdown icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 15v4a3 3 0 0 0 3 3l4-9V2H5.72a2 2 0 0 0-2 1.7l-1.38 9a2 2 0 0 0 2 2.3zm7-13h2.67A2.31 2.31 0 0 1 22 4v7a2.31 2.31 0 0 1-2.33 2H17"
  />
</svg>
`;

exports[`fe-thumbsup icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
  />
</svg>
`;

exports[`fe-x icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="18"
    x2="6"
    y1="6"
    y2="18"
  />
  <line
    x1="6"
    x2="18"
    y1="6"
    y2="18"
  />
</svg>
`;

exports[`nr-ai icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 47 54"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M11.132 10.134h4.607v6.478M8.8 41.232l3.49 2.64h3.457"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <g
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    >
      <path
        d="M23.83 3.396v45.61l-3.11 2.332-10.366-4.146-1.555-5.96-3.887-2.592-2.85-11.143 2.85-12.957 6.22-4.406.777-4.924 8.034-3.11z"
      />
      <path
        d="M23.796 3.396v45.61l3.11 2.332 10.366-4.146 1.555-5.96 3.887-2.592 2.85-11.143-2.85-12.957-6.22-4.406-.777-4.924-8.033-3.11z"
      />
    </g>
    <path
      d="M23.92 35.993h4.303l2.38 4.76M32.317 27.618h-16.23l-3.145 5.041M23.878 19.277h4.55l2.131-4.222"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M29.41 12.607a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M29.41 12.607a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M29.205 43.142a2.471 2.471 0 114.943 0 2.471 2.471 0 01-4.943 0"
      fill="#0AB0BF"
    />
    <path
      d="M29.205 43.142a2.471 2.471 0 114.943 0 2.471 2.471 0 01-4.943 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M32.313 27.587a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M32.313 27.587a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M9.45 35.01a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M9.45 35.01a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
  </g>
</svg>
`;

exports[`nr-fso icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 67 54"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M16.609 35.907h48.175V2.077H16.61z"
      fill="var(--primary-background-color)"
    />
    <path
      d="M16.609 35.907h48.175V2.077H16.61z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M20.976 8.328a.987.987 0 111.974 0 .987.987 0 01-1.974 0"
      fill="#0BAFBE"
    />
    <path
      d="M20.976 8.328a.987.987 0 111.974 0 .987.987 0 01-1.974 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M25.676 8.351h14.829"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M21.098 12.954a.987.987 0 111.974 0 .987.987 0 01-1.974 0"
      fill="#0BAFBE"
    />
    <path
      d="M21.098 12.954a.987.987 0 111.974 0 .987.987 0 01-1.974 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M25.746 12.978H40.37"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M2.073 51.401H50.25v-33.83H2.073z"
      fill="var(--primary-background-color)"
    />
    <path
      d="M2.073 51.401H50.25v-33.83H2.073zM33.044 36.331l7.611-8.68M22.617 32.637l5.838 4.24M10.931 40.66l6.95-7.595"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M17.495 30.742a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.822 0"
      fill="#0BAFBE"
    />
    <path
      d="M17.495 30.742a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.822 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M28.455 38.7a2.909 2.909 0 014.538-2.413 2.91 2.91 0 11-4.538 2.413"
      fill="#0BAFBE"
    />
    <path
      d="M28.455 38.7a2.909 2.909 0 014.538-2.413 2.91 2.91 0 11-4.538 2.413z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M6.056 42.806a2.91 2.91 0 115.821 0 2.91 2.91 0 01-5.821 0"
      fill="#0BAFBE"
    />
    <path
      d="M6.056 42.806a2.91 2.91 0 115.821 0 2.91 2.91 0 01-5.821 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M39.75 25.541a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.821 0"
      fill="#0BAFBE"
    />
    <path
      d="M39.75 25.541a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.821 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
  </g>
</svg>
`;

exports[`nr-tdp icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 54 53"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M46.898 12.204h-5.102"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M51.954 11.716a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M51.954 11.716a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M47.251 41.667h-5.58"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M51.954 41.66a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M51.954 41.66a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M6.703 27.355h5.579"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M2 27.361a2.351 2.351 0 104.703 0 2.351 2.351 0 00-4.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M2 27.361a2.351 2.351 0 104.703 0 2.351 2.351 0 00-4.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M12.68 5.636v10.247c.022.101.057.197.057.305 0 1.965 5.624 4.821 14.437 4.821 8.813 0 14.438-2.856 14.438-4.821 0-.115.036-.22.06-.326V5.633M27.174 36.385c8.813 0 14.438-2.856 14.438-4.821 0-.115.036-.22.06-.326V21.009c-3.147 2.285-8.84 3.467-14.498 3.467-5.656 0-11.345-1.182-14.493-3.464v10.247c.021.1.056.197.056.305 0 1.965 5.624 4.821 14.437 4.821z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M27.174 39.818c-5.656 0-11.345-1.182-14.493-3.462v8.314c0 .031-.003.06-.003.093 0 4.57 7.469 7.034 14.493 7.034 7.028 0 14.497-2.464 14.497-7.034h.003v-8.41c-3.146 2.282-8.84 3.465-14.497 3.465zM41.671 5.633c0 1.997-6.49 3.616-14.495 3.616-8.006 0-14.495-1.619-14.495-3.616 0-1.996 6.49-3.615 14.495-3.615 8.006 0 14.495 1.619 14.495 3.615z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
  </g>
</svg>
`;
